--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginActivity$LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Registro" />
-        <activity android:name=".Meseros" />
-        <activity android:name=".Cocineros"></activity>
+        <activity android:name=".Registro$Registro" />
+        <activity android:name=".Meseros$Meseros" />
+        <activity android:name=".Cocineros$Cocineros"></activity>
     </application>
 
 </manifest>
