--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 16 17:21:21 COT 2018
-sdk.dir=C\:\\Users\\julian\\AppData\\Local\\Android\\Sdk
+#Wed May 16 20:20:17 COT 2018
+sdk.dir=C\:\\Users\\juanp\\AppData\\Local\\Android\\Sdk
